# Dreamroam

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  LICENSE.txt  README.md
.github/workflows/: c-cpp-linux.yml  c-cpp-macos.yml  c-cpp-windows.yml  c-cpp.yml
docs/: api.md
docs/html/: _a_component_8hh_source.html  _a_scene_8hh_source.html  _advanced_rendering_pipeline_8hh_source.html  _base_8hh_source.html  _base_components_8hh_source.html  _default_renderer_8hh_source.html  _default_textured_renderer_8hh_source.html  _dreamroam_scene_8hh_source.html  _entity_8hh_source.html  _game_object_8hh_source.html  _geometry_8hh_source.html  _geometry_loader_8hh_source.html  _geometry_store_8hh_source.html  _global_settings_8hh_source.html  _graphics_pipeline_factory_8hh_source.html  _graphics_pipeline_renderer_8hh_source.html  _profiling_8hh_source.html  _push_constants_8hh_source.html  _render_component_8hh_source.html  _renderer_base_8hh_source.html  _rendering_system_8hh_source.html  _rendering_system_base_8hh_source.html  _scene_handler_8hh_source.html  _system_base_8hh_source.html  _texture_8hh_source.html  _texture_store_8hh_source.html  _transform_8hh_source.html  _untyped_system_base_8hh_source.html  _utils_lava_8hh_source.html  annotated.html  annotated_dup.js  class_d_core_1_1_component_system_1_1_a_component-members.html  class_d_core_1_1_component_system_1_1_a_component.html  class_d_core_1_1_component_system_1_1_a_component.js  class_d_core_1_1_component_system_1_1_a_component_a14e745bfaee5215041126653e8a3a726.html  class_d_core_1_1_component_system_1_1_a_component_aba70c25a5e7d0ba865bf6f15e4186bbd.html  class_d_core_1_1_component_system_1_1_a_component_adcdcb50556a8d45ac913005223bf56b2.html  class_d_core_1_1_component_system_1_1_a_component_ae454fe4879331e8dceef913590fbc11b.html  class_d_core_1_1_component_system_1_1_a_scene-members.html  class_d_core_1_1_component_system_1_1_a_scene.html  (+223 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+10 more)
docs/markdown/: api.md
examples/: CMakeLists.txt
examples/PhysicsExample/: CMakeLists.txt  PhysicsScene.cc  PhysicsScene.hh  main.cc
examples/RotatingCube/: CMakeLists.txt  RotateCubeScene.cc  RotateCubeScene.hh  main.cc
src/: GlobalSettings.cc  GlobalSettings.hh  main.cc
src/ComponentBased/: AComponent.cc  AComponent.hh  AScene.cc  AScene.hh  BaseComponents.cc  BaseComponents.hh  Entity.cc  Entity.hh  GameObject.cc  GameObject.hh  SceneHandler.cc  SceneHandler.hh  Transform.cc  Transform.hh
src/ComponentBased/Systems/: InputSystem.hh  InputSystemDefines.hh  PhysicsSystem.hh  SystemBase.cc  SystemBase.hh  ThirdPersonCameraControllerSystem.hh  UntypedSystemBase.cc  UntypedSystemBase.hh
src/ComponentBased/Systems/Base/: SystemBase.hh  UntypedSystemBase.cc  UntypedSystemBase.hh
src/ComponentBased/VulkanHelpers/: GPUSelectorStrategy.cc  GPUSelectorStrategy.hh
src/Components/: RenderComponent.hh
src/Geometry/: GeometryLoader.cc  GeometryLoader.hh  GeometryStore.cc  GeometryStore.hh
src/RenderObjects/: Geometry.cc  Geometry.hh  GeometryStore.cc  GeometryStore.hh  Texture.cc  Texture.hh  TextureStore.cc  TextureStore.hh
src/RenderingSystem/: AdvancedRenderingPipeline.cc  DefaultRenderer.cc  DefaultRenderer.hh  DefaultTexturedRenderer.cc  DefaultTexturedRenderer.hh  GraphicsPipelineFactory.cc  GraphicsPipelineFactory.hh  GraphicsPipelineRenderer.cc  GraphicsPipelineRenderer.hh  PushConstants.hh  RenderComponent.hh  RenderingSystem.cc  RenderingSystem.hh  RenderingSystemBase.hh
src/RenderingSystem/MeshHandlers/: Geometry.cc  Geometry.hh  GeometryLoader.cc  GeometryLoader.hh  GeometryStore.cc  GeometryStore.hh
src/RenderingSystem/Pipeline/: AdvancedRenderingPipeline.cc  AdvancedRenderingPipeline.hh  GraphicsPipelineFactory.cc  GraphicsPipelineFactory.hh  GraphicsPipelineRenderer.cc  GraphicsPipelineRenderer.hh
src/RenderingSystem/Renders/: DefaultRenderer.cc  DefaultRenderer.hh  DefaultTexturedRenderer.cc  DefaultTexturedRenderer.hh  RendererBase.cc  RendererBase.hh
src/RenderingSystem/TextureHandlers/: Texture.cc  Texture.hh  TextureStore.cc  TextureStore.hh
src/Scenes/: DreamroamScene.cc  DreamroamScene.hh
src/Utils/: Base.hh  PerlinNoise.cc  PerlinNoise.hh  UtilsLava.cc  UtilsLava.hh
src/Utils/Debug/: Profiling.hh
src/shaders/: fog.glsl  fxaa.glsl  opaque.frag  opaque.vert  opaqueTexturedInstanced.frag  opaqueTexturedInstanced.vert  opaqueTexturedSimple.frag  opaqueTexturedSimple.vert  output.frag  output.vert  plane.vert  shadow.glsl  shadowMap.frag  shadowMap.vert  shadowMapInstanced.vert  transparent.frag  transparent.vert  transparentTexturedSimple.frag  transparentTexturedSimple.vert
